fixed spacing on gallery

--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -225,8 +225,8 @@ main {
             padding: 3px;
             
             @media all and (min-width: @break-m) {
-                display: inline-block; 
-                padding: 3px 3px 0;
+                float: left; 
+                padding: 2px 4px;
             }
         }
     }
